@@ -154,7 +154,10 @@ Next version (4.05.0):
 
 ### Bug fixes
 
-- PR#7414/GPR#929: Soundness bug with non-generalized type variable and functors
+- PR#7216, GPR#949: don't require double parens in Functor((val x))
+  (Jacques Garrigue, review by Valentin Gatien-Baron)
+
+- PR#7414, GPR#929: Soundness bug with non-generalized type variable and functors
   (Jacques Garrigue, report by Leo White)
 
 - PR#7421: Soundness bug with GADTs and lazy
